Fix padding on small screen

--- a/src/app/blog/[slug]/page.module.css
+++ b/src/app/blog/[slug]/page.module.css
@@ -1,17 +1,19 @@
-.post {
-    padding: 0;
-  }
-
-@media (max-width: 600px) {
+@media (max-width: 768px) {
+    .post img {
+        padding-left: unset;
+        max-width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
     .post p {
-        padding-left: 1rem;
-        padding-right: 1rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
 
     .post h1,
     .post h2,
     .post h3 {
-        padding-left: 1rem;
-        padding-right: 1rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
 }
